Update endpoints to return more information.
This work is a follow up to my meeting with Holly and makes related
changes:

* A lot of the /records endpoints tests were not actually validating the
  response and would not return an error in testing  when the app returns
  an empty string even though the API spec says it should return a list of
  records.  This was happening because we were not invoking the command
  `run_test!` which is what caused the repose to be validated against
  the configuration.

* I removed rswag-specs as a separate gem because in fact rswag comes
  it's own copy of this gem built in.

* I added a monkey patch for an rswag-spec validation method because there
  is a bug that makes all fields required even though we only made
  specific fields required.

* I added two headers to the response of record creation and deletion to
  keep track of how many total records there are in the database after
  we ingest or post for deletion a marc record, and to track how many
  records were processed in that instance.

* I updated the ingest process not to delete records that are
  duplicates but instead update them.

* I update some of the API documentation by adding missing object
  definition (local_metadatum) which was being caught as missing once
  proper response validation was happening.

* I updated the delete records to return a list of deleted records.
