# app/controllers/concerns/total_records_count_header.rb
@@ -1,0 +1,13 @@
+# frozen_string_literal: true
+
+module TotalRecordsCountHeader
+  extend ActiveSupport::Concern
+
+  included do
+    after_action :set_total_records_count_header, only: [:create, :delete]
+  end
+
+  def set_total_records_count_header
+    response.headers["X-CM-Total-Records-Count"] = Record.count
+  end
+end
